--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,67 @@
 .divisor {
     background-color: blue;
 }
+.banner_main {
+    display: block;
+    width: 100%;
+}
+.banner_main img {
+    display: flex;
+margin-left: auto;
+margin-right: auto;
+height: 50%;
+filter: blur(8px);
+  -webkit-filter: blur(8px);
+}
+.header img {
+    display: block;
+    width: 5%;
+    height: 5%;
+}
+.header {
+    display: flex;
+}
+.ul {
+    display: flex;
+}
+.nav-link {
+    border: 2px solid gray; border-radius: 8px;
+    display: flex;
+    font-family: sans-serif, system-ui;
+    font-weight: bold;
+}
+.nav-link:hover {
+    color: rgb(4, 121, 33);
+}
+/* Testando sistemas de alinhamento */
+.main_title {
+    position: relative;
+    background-color: rgba(6, 21, 105, 0.24);
+    font-size: 40px;
+    color: #eee;
+    margin: auto;
+    padding-left: 30px;
+    width: 17%;
+    border-radius: 24px;    
+
+}
+.sub_title {
+    position:absolute
+    top: 30px;
+}
+
+.box-banner {
+    font-family: sans-serif
+}
+
+.section_explanatory {
+    font-family: sans-serif;
+    text-align: center;
+}
+
+.section_img {
+    max-width:400px;
+    max-height:280px;
+    width: auto;
+    height: auto;
+}
