--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,67 +1,141 @@
+body {
+    margin: 0;
+}
+
 .divisor {
     background-color: blue;
 }
 .banner_main {
     display: block;
+    overflow: hidden;
+    position: relative;
     width: 100%;
 }
+
+.img-wrapper {
+    height: 100%;
+    max-height: 400px;    
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+}
+
 .banner_main img {
     display: flex;
-margin-left: auto;
-margin-right: auto;
-height: 50%;
-filter: blur(8px);
-  -webkit-filter: blur(8px);
+    filter: blur(8px) saturate(0.5);
+    height: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    position: absolute;
+    object-fit: cover;
+    object-position: bottom;
+    transform: scale(1.1);
+    width: 100%;
 }
 .header img {
     display: block;
-    width: 5%;
-    height: 5%;
+    max-height: 85px;
 }
 .header {
     display: flex;
+    background-color: #cacaca;
+    justify-content: space-between;
+    padding: 15px 50px;
 }
-.ul {
+.header ul {
     display: flex;
+    align-items: center;
 }
 .nav-link {
-    border: 2px solid gray; border-radius: 8px;
     display: flex;
     font-family: sans-serif, system-ui;
     font-weight: bold;
+    margin-right: 50px;
 }
+
+.nav-link:last-child {
+    margin-right: 0;
+}
+
 .nav-link:hover {
     color: rgb(4, 121, 33);
 }
 /* Testando sistemas de alinhamento */
 .main_title {
     position: relative;
-    background-color: rgba(6, 21, 105, 0.24);
     font-size: 40px;
-    color: #eee;
     margin: auto;
-    padding-left: 30px;
-    width: 17%;
-    border-radius: 24px;    
-
 }
+
 .sub_title {
-    position:absolute
-    top: 30px;
+    font-size: 18px;
+    font-weight: 400;
 }
 
 .box-banner {
-    font-family: sans-serif
+    background-color: rgba(6, 21, 105, 0.54);
+    border-radius: 24px;  
+    color: #eee;
+    margin-left: ;
+    position:absolute;
+    margin-left: 50px;
+    padding: 20px 40px;
+    top: 50%;
+    font-family: sans-serif;
+    transform: translate(0, -50%);
+}
+
+.box-banner a {
+    position: absolute;
+    top: calc(100% + 30px);
+    left: 0;
+    color: white;
+    text-decoration: none;
+    border-left: 2px solid;
+    padding-left: 10px;
 }
 
 .section_explanatory {
+    display: flex;
+    justify-content: space-between;
     font-family: sans-serif;
     text-align: center;
+    padding: 50px;
+}
+
+.section_explanatory .text-wrapper {
+    display: flex;
+    font-size: 1.5em;
+    justify-content: center;
+    flex-direction: column;
+    text-align: right;
+    padding-right: 50px;
+    box-sizing: border-box;
+}
+
+.section_explanatory .text-wrapper {
+    max-width: 50%;
+}
+
+.section_explanatory p {
+    color: rgba(6, 21, 105, 0.74);
+    padding-left: 25%;
+}
+
+.section_explanatory h2 {
+    color: rgba(6, 21, 105, 0.34);
 }
 
 .section_img {
-    max-width:400px;
-    max-height:280px;
+    max-height: 450px;
+    margin: auto;
     width: auto;
     height: auto;
+}
+
+.divisor {
+    background-color: rgba(6, 21, 105, 0.74);
+    border-radius: 10px;
+    margin: 62px 0;
+    width: 30px;
 }
